New rule: Two way pscost updates. 
New rule: No history reset. Threshold for reliability is 40.
Hinting: Update true score only if the hint was successful. Update the other score otherwise.
New branching rule. 20% with 0.9 cost_update_factor
--- 30 dec full ---
No custom branching
--- 31 dec full 1 ---
Always provide solution hints
--- 31 dec full 2 ---
Solution hint parameter again.
pscost history reset to 3
--- 1 jan full 1 ---
pscost history reset to 5
--- 1 jan full 2 ---
store global history
history reset count is a parameter.
--- 2 jan full 1 ---
history reset to 4 (non parameter)
--- 2 jan full 2 ---
max_cuts_root is a parameter
--- 3 jan full 1 ---
Print [END] timestamp after updating the parameter scores (and some print statements)
Provide at least one complete solution.
--- 4 jan full 1 ---
Level pscost as branching rule.
Revert complete solution change.
--- 4 jan full 2 ---
Revert levelpscost branching
No restarts
Heuristics and branching statistics at the end
--- 5 jan full ---
Turn off non performing heuristics after index 25
--- 6 jan full ---
Max restarts as parameter 0,1
fix the random seed
--- 7 jan full ---
Max restarts back to zero (causes wrong convergence in other params) REVISIT
--- 7 jan full 2 ---
parameters: If final scores are within 0.05, pick randomly
First solve always with default parameters
--- 8 jan full ---
parameters: If final scores are within 0.03, pick randomly
--- 9 jan full ---
New information from testfiles
if only obj change -> history reset to 1
--- 10 jan full ---
Levelpscost different implementation.
--- 11 jan full ---
Turn off levelpscost.
if only obj change -> history reset to 3
turn off non performing heuristics after index 15
print and record presolve and cuts stats
--- 14 jan full ---
turn off non performing heuristics after index 25
turn off non performing presolve after index 15
turn off non performing cuts after index 25
--- 15 jan full ---
Use mt19937 for random number generation in param tuning.
